Additional styling and added form partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,23 +23,23 @@
         <br><br>
           <h4 class='text-info'>Find Resources by Category</h4>
           <br>
-          <a href="resources#project-related">Project Related</a>
+          <a href="/resources/#project-related">Project Related</a>
           <br>
-          <a href="resources#official-docs">Official Documentation</a>
+          <a href="/resources/#official-docs">Official Documentation</a>
           <br>
-          <a href="resources#tools">Tools</a>
+          <a href="/resources/#tools">Tools</a>
           <br>
-          <a href="resources#rails">Rails</a>
+          <a href="/resources/#rails">Rails</a>
           <br>
-          <a href="resources#ruby">Ruby</a>
+          <a href="/resources/#ruby">Ruby</a>
           <br>
-          <a href="resources#apis">APIs</a>
+          <a href="/resources/#apis">APIs</a>
           <br>
-          <a href="resources#active-record">ActiveRecord</a>
+          <a href="/resources/#active-record">ActiveRecord</a>
           <br>
-          <a href="resources#active-record">Testing</a>
+          <a href="/resources/#active-record">Testing</a>
           <br>
-          <a href="resources#active-record">Miscellaneous</a>
+          <a href="/resources/#active-record">Miscellaneous</a>
           <br>
           <% flash.each do |type, message| %>
           <p class='text-danger'><%= message %></p>
