--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,41 +1,4 @@
 <section class="container-fluid">
   <h2 class='text-info'>Add a Resource</h2>
-
-  <%= form_tag "/resources", method: :post do %>
-    <div class="form-group">
-      <%= label_tag :title, "Title" %>
-      <div class="width 100%">
-      <%= text_field_tag :title %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :link, "URL" %>
-      <div class="width 100%">
-      <%= text_field_tag :link %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :category, "Category" %>
-      <div class="width 100%">
-      <%= select_tag :category, raw("<option>Official Documentation</option><option>Project Related</option><option>Tools</option><option>Miscellaneous</option><option>Rails</option><option>Ruby</option><option>APIs</option><option>ActiveRecord</option><option>Testing</option>".html_safe), include_blank: true  %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :source, "Website Name" %>
-      <div class="width 100%">
-      <%= text_field_tag :source %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :project, "Related Project (if applicable)" %>
-      <div class="width 100%">
-      <%= text_field_tag :project %>
-      </div>
-    </div>
-      <%= submit_tag "Submit Your Findings", class: 'btn btn-success btn-lg' %>
-  <% end %>
-</section>
+  <%= render partial: 'shared/form', locals: {path: '/resources', method: :post, button_text: 'Submit Your Findings'} %>
+  </section>
