--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -1,41 +1,4 @@
-<h2 class='text-info'>Edit a Resource</h2>
-
 <section class="container-fluid">
-  <%= form_tag "/resources?id=#{@resource.id}", method: :put do %>
-    <div class="form-group">
-      <%= label_tag :title, "Title" %>
-      <div class="width 100%">
-      <%= text_field_tag :title, @resource.title %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :link, "URL" %>
-      <div class="width 100%">
-      <%= text_field_tag :link, @resource.link %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :category, "Category" %>
-      <div class="width 100%">
-      <%= select_tag :category, raw("<option>Official Documentation</option><option>Project Related</option><option>Tools</option><option>Miscellaneous</option><option>Rails</option><option>Ruby</option><option>APIs</option><option>ActiveRecord</option><option>Testing</option>".html_safe), include_blank: true %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :source, "Website Name" %>
-      <div class="width 100%">
-      <%= text_field_tag :source, @resource.source %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag :project, "Related Project (if applicable)" %>
-      <div class="width 100%">
-      <%= text_field_tag :project, @resource.project %>
-      </div>
-    </div>
-      <%= submit_tag "Edit Your Findings", class: 'btn btn-success btn-lg' %>
-  <% end %>
-</section>
+  <h2 class='text-info'>Edit a Resource</h2>
+  <%= render partial: 'shared/form', locals: {path: "/resources?id=#{@resource.id}", method: :put, button_text: 'Edit Your Findings'} %>
+  </section>
