--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,9 @@
   <body>
     <%= render 'shared/navigation' %>
 
-
-  <div id="main-container" class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-3">
+      <div class="sidebar">
         <h3 class='text-info'>Resourceful
           <br><br>
           <small class="text-muted">A site for current Turing Mod 3 students to catalog helpful articles and resources</small>
@@ -41,11 +40,11 @@
           <br>
           <a href="/resources/#active-record">Miscellaneous</a>
           <br>
-          <% flash.each do |type, message| %>
-          <p class='text-danger'><%= message %></p>
-          <% end %>
       </div>
-      <div class="col-xs-9">
+      <div class="col-sm-9 col-sm-offset-5 col-md-10 col-md-offset-2 main">
+        <% flash.each do |type, message| %>
+        <p class='text-danger'><%= message %></p>
+        <% end %>
         <%= yield %>
       </div>
     </div>
