--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-fixed-top" role="navigation">
   <div class="container">
     <ul class="nav navbar-nav navbar-right">
    <li class="dropdown">
