--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
           <br>
           <a href="/resources/#active-record">ActiveRecord</a>
           <br>
-          <a href="/resources/#active-record">Testing</a>
+          <a href="/resources/#testing">Testing</a>
           <br>
-          <a href="/resources/#active-record">Miscellaneous</a>
+          <a href="/resources/#misc">Miscellaneous</a>
           <br>
       </div>
       <div class="col-sm-9 col-sm-offset-5 col-md-10 col-md-offset-2 main">
